[tool.poetry]
name = "template_python"
version = "0.1.0"
description = ""
authors = ["motty.mio2 <motty.mio2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^16.4.0"
fastapi = "^0.94.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^0.991"
ruff = "^0.0.218"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E266,E402"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
strict = "true"

[tool.ruff]
line-length = 120

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
